--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,54 +49,55 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
       
-      -name: Build, tag, and push image to Amazon ECR
-      id: build-image
-      env:
-        ECR_REGISTRY: ${{steps.login-ecr.outputs.registry}}
-        ECR_REPOSITORY: ${{secrets.ECR_REPOSITORY_NAME}}
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
+        env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY_NAME }}
         IMAGE_TAG: latest
-      run: |
-        # Build a docker container and
-        # push it to ECR so that it can
-        # be dployed to EC2.
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        docker push $ECR_REGISTRY/#ECR_REPOSITORY:$IMAGE_TAG
-        echo "::set-output name = image::$ECR_REGISTRY/#ECR_REPOSITORY:$IMAGE_TAG"
+        run: |
+          # Build a docker container and
+          # push it to ECR so that it can
+          # be dployed to EC2.
+          
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          docker push $ECR_REGISTRY/#ECR_REPOSITORY:$IMAGE_TAG
+          echo "::set-output name = image::$ECR_REGISTRY/#ECR_REPOSITORY:$IMAGE_TAG"
 
 Continuous-Deployment:
   needs: build-and-push-ecr-image
   runs-on: self-hosted
   steps:
-    -name: Checkout
+    - name: Checkout
       uses: actions/checkout@v3
     
-    -name: Configure AWS Credentials
+    - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{secrets.AWS_ACCESS_KEY_ID}}
         aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
         aws-region: ${{secrets.AWS_REGION}}
     
-    -name: Login to Amazon ECR
+    - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
     
-    -name: Pull latest image
+    - name: Pull latest image
       run: |
         docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{secrets.ECR_REPOSITORY_NAME}}::latest
     
-    -name: Stop and remove sensor container if running
-      run: |
-      docker ps -q --filter "name=sensor" | grep -q . && docker stop
-      sensor && docker rm -fv sensor
+    # -name: Stop and remove sensor container if running
+    #   run: |
+    #   docker ps -q --filter "name=sensor" | grep -q . && docker stop
+    #   sensor && docker rm -fv sensor
     
-    -name: Run Docker Image to serve users
+    - name: Run Docker Image to serve users
       run: |
-      docker run -d -p 80:8080 --name=sensor -e 'MONGO_DB_URL=${{secrets.MONGO_DB_URL}}' -e 'AWS_ACCESS_KEY_ID=${{secrets.
-      AWS_ACCESS_KEY_ID}}' -e 'AWS_SECRET_ACCESS_KEY=${{secrets.AWS_SECRET_ACCESS_KEY}}' -e 'AWS_REGION=${{secrets.AWS_REGION}}'
-       ${{secrets.AWS_ECR_LOGIN_URI}}/${{secrets.ECR_REPOSITORY_NAME}}::latest
+        docker run -d -p 80:8080 --name=sensor -e 'MONGO_DB_URL=${{secrets.MONGO_DB_URL}}' -e 'AWS_ACCESS_KEY_ID=${{secrets.
+        AWS_ACCESS_KEY_ID}}' -e 'AWS_SECRET_ACCESS_KEY=${{secrets.AWS_SECRET_ACCESS_KEY}}' -e 'AWS_REGION=${{secrets.AWS_REGION}}'
+        ${{secrets.AWS_ECR_LOGIN_URI}}/${{secrets.ECR_REPOSITORY_NAME}}::latest
       
-    -name: Clean previous images and containers 
+    - name: Clean previous images and containers 
       run: |
         docker system prune -f
 
