--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,11 @@ cycler==0.12.1
 certifi
 dill==0.3.8
 dnspython==2.6.1
+evidently==0.1.58.dev0
+fastapi==0.78.0
 fonttools==4.53.0
 graphviz==0.20.3
+httptools==0.5.0
 imbalanced-learn==0.12.3
 imblearn==0.0
 importlib_resources==6.4.0
@@ -15,13 +18,15 @@ kiwisolver==1.4.5
 lightgbm==4.4.0
 matplotlib==3.7.5
 miceforest==5.7.0
+mypy-boto3-s3==1.24.76
 numpy==1.24.4
 pandas==2.0.3
 pillow==10.3.0
+pip-chill==1.0.1
 plotly==5.22.0
 pymongo==4.2.0
 pyparsing==3.1.2
-python-dotenv
+python-dotenv==0.21.0
 pytz==2024.1
 pywin32==306
 scikit-learn==1.3.2
@@ -30,7 +35,17 @@ seaborn==0.13.2
 sensor==0.0.1
 tenacity==8.3.0
 threadpoolctl==3.5.0
+types-s3transfer==0.6.0.post4
 tzdata==2024.1
-xgboost==2.0.3
+uvicorn==0.18.3
+watchfiles==0.17.0
+websockets==10.3
+wincertstore==0.2
+xgboost==1.6.2
+neuro-mf==0.0.5
 pyYAML
 -e .
+
+# pip install "cython<3.0.0" wheel
+# pip install "pyyaml==5.4.1" --no-build-isolation
+# pip install -r requirements.txt
